updated avatar, fixed h1 title top spacing

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -45,6 +45,7 @@ header {
     font-family: 'Lato', serif;
     font-size: 3em;
     color: @maincolor;
+    padding-top: 5%;
   }
   h2 {
     font-size: 2em;
@@ -329,7 +330,7 @@ nav {
 }
 
 #profile-image {
-  background-image: url('http://www.danafng.com/public/dana-profile-pic.png');
+  background-image: url('http://www.danafng.com/public/dana-avatar.png');
   background-size: cover;
   height: 150px;
   width: 150px;
